--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 														</div>
 													</li>
                                                     <li>
-                                                        <input type="button" class="submit" value="Valider"/>
+                                                        <input type="button" class="submit" value="Valider" onclick="document.location.href='pay.html'"/>
                                                     </li>
                                                 </ol>
                                             </form>
@@ -434,7 +434,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 														</div>
 													</li>
                                                     <li>
-                                                        <input type="button" class="submit" value="Valider"/>
+                                                        <input type="button" class="submit" value="Valider" onclick="document.location.href='pay.html'"/>
                                                     </li>
                                                 </ol>
                                             </form>
@@ -518,7 +518,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             </li>
 
                                             <li>
-                                                <input type="button" class="submit" value="Transférer Maintenant"/>
+                                                <input type="button" class="submit" value="Transférer Maintenant" onclick="document.location.href='pay.html'"/>
                                             </li>
                                         </ol>
                                     </form>
