--- a/index.html
+++ b/index.html
@@ -1688,7 +1688,7 @@ function testa() {
 			sessionStorage.setItem('arrive', villeArrive);
 			sessionStorage.setItem('requestBillet', url);
 			
-	  $(location).attr('href','https/utility-dev.github.io/vols-list.html');
+	  $(location).attr('href','https://utility-dev.github.io/vols-list.html');
             
          
 }
