--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div id="parentVerticalTab">
                     <div class="agileits-tab_nav">
                         <ul class="resp-tabs-list hor_1">
-                            <li><i class="icon fa fa-mobile" aria-hidden="true"></i>Services Mobicash</li>
-                            <li><i class="icon fa fa-mobile" aria-hidden="true"></i>Services Airtel Money</li>
+                            <li><i class="icon fa fa-mobile" aria-hidden="true"></i>Mobicash</li>
+                            <li><i class="icon fa fa-mobile" aria-hidden="true"></i>Airtel Money</li>
                             <li><i class="icon fa fa-paper-plane" aria-hidden="true"></i>Transfert International</li>
 							<li><i class="icon fa fa-plane" aria-hidden="true"></i>Billet d'avion</li>
 							<li><i class="icon fa fa-bus" aria-hidden="true"></i>Billet de bus</li>
