--- a/vols-list.html
+++ b/vols-list.html
@@ -590,7 +590,7 @@ function json2Table(json) {
 	});
 
   //build the table
-  const table = '<table class="table table-bordered agileinfo"><thead><tr>'.join(headerRow).join('</tr><thead><tbody>${rows}<tbody><table>');
+  const table = '<table class="table table-bordered agileinfo"><thead><tr>'.concat(headerRow,'</tr><thead><tbody>${rows}<tbody><table>');
 
   return table;
 }
