--- a/vols-list.html
+++ b/vols-list.html
@@ -575,20 +575,14 @@ function json2Table(json) {
 
 
     let rows = "";
-	$.map(json, function(val, key) {
-	  if(key.toString().localeCompare("REFERENCE")==0){
-		  res.concat('<td class="t-one">',val,"</td>");
-		  res.concat('<td class="wthree"><i class="fa fa-plane" aria-hidden="true"></i> Train name </td>');
-	  }else if(key.toString().localeCompare("DEPART")==0){
-		  res.concat('<td class="wthree"><i class="fa fa-clock-o"></i>',val,'</td>');
-	  }else if(key.toString().localeCompare("ARRIVE")==0){
-		  res.concat('<td class="wthree"><i class="fa fa-clock-o"></i>',val,'</td>');
-	  }else if(key.toString().localeCompare("PRICE")==0){
-		  res.concat('<td class="price us">',val,'<a href="#" data-toggle="modal" data-target="#myModalbook" class="seat-button two">Book Now</a></td>');
-	  }
+    for(let i = 0; i < json.length; i++){ 
+	rows.concat('<td class="t-one">',json[i].REFERENCE,"</td>");
+	rows.concat('<td class="wthree"><i class="fa fa-plane" aria-hidden="true"></i> Train name </td>');
+	rows.concat('<td class="wthree"><i class="fa fa-clock-o"></i>',json[i].DEPART,'</td>');
+	rows.concat('<td class="wthree"><i class="fa fa-clock-o"></i>',json[i].ARRIVE,'</td>');
+	rows.concat('<td class="price us">',json[i].PRICE,'<a href="#" data-toggle="modal" data-target="#myModalbook" class="seat-button two">Book Now</a></td>');
 	  
-
-	});
+    }
 
   //build the table
   const table = '<table class="table table-bordered agileinfo"><thead><tr>'.concat(headerRow,'</tr><thead><tbody>',rows,'<tbody><table>');
