--- a/vols-list.html
+++ b/vols-list.html
@@ -324,8 +324,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
 					</div>
 					<div class="modal-body">
-					<h4 class="modal-title">
-                    Railway Reservation Form</h4>
+					<h4 class="modal-title">Formulaire de reservation</h4>
                         <form class="w3layouts-train-form" action="pay.html" method="post">
 					<div class="table-responsive">
 		   <table class="table table-bordered agileinfo"> 
@@ -333,6 +332,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
  			       <tr> 
 					   <th>No</th>  
 					   <th>Nom</th> 
+				           <th>Prénom</th>
+				           <th>No Passeport</th> 
 					   <th>Sex M/F</th> 
 					   <th>Age</th> 
 					   <th>Tarif enfants</th> 
