test value form

--- a/espace-client.html
+++ b/espace-client.html
@@ -281,7 +281,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											<div class="first-row form-group">
 												<div class="controls">
 													<label class="control-label">Prénom</label>
-													<input class="billing-address-name form-control" type="text" name="name" placeholder="John">
+													<input class="billing-address-name form-control" type="text" name="name" value="John">
 												</div>
 												<div class="controls">
                                                     <label class="control-label">Nom</label>
