test value form

--- a/espace-client.html
+++ b/espace-client.html
@@ -285,7 +285,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 												</div>
 												<div class="controls">
                                                     <label class="control-label">Nom</label>
-                                                    <input class="billing-address-name form-control" type="text" name="name" placeholder="Moussavou">
+                                                    <input class="billing-address-name form-control" type="text" name="name">
                                                 </div>
                                                 <div class="controls">
                                                     <label class="control-label">Téléphone</label>
