test value form

--- a/espace-client.html
+++ b/espace-client.html
@@ -320,6 +320,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  });
 			});
 		</script>
+
+        <script>
+        $(document).ready(function(){
+          $("button").click(function(){
+            $("#id-phone").val(sessionStorage.setItem("phone"));
+          });
+        });
+        </script>
+
 	<!-- //credit-card -->
 
                 </div>
