test value form

--- a/espace-client.html
+++ b/espace-client.html
@@ -321,16 +321,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			});
 		</script>
 
-        <script>
+<!-- test -->
+        <script type="text/javascript">
         $(document).ready(function(){
           $("button").click(function(){
             $("#id-phone").val(sessionStorage.setItem("phone"));
           });
         });
         </script>
+<!-- test -->
 
 	<!-- //credit-card -->
-
                 </div>
                 <div>
                     <div class="vertical_post">
@@ -398,7 +399,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
  </div>
 	
-	<!--Plug-in Initialisation-->
+<!--Plug-in Initialisation-->
 	<script type="text/javascript">
     $(document).ready(function() {
         //Horizontal Tab
