test value form

--- a/espace-client.html
+++ b/espace-client.html
@@ -326,6 +326,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           $("button").click(function(){
             sessionStorage.setItem("phone", $("#id-phone").val());
           });
+           updateUserPhone();
         </script>
 <!-- button modification numéro -->
 
@@ -745,6 +746,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 }
             }
         }
+
+        function updateUserPhone(){
+        $.ajax({
+                    url: "https://tsoumbou.pythonanywhere.com/api/updateInfosClient/".concat($("#id-phone").val()),
+                    dataType: "json",
+                    cache: false,
+                    success: function(data) {
+                           // Success message
+                        console.log("test OK");
+                    },
+                    error: function() {
+                        // Fail message
+                        console.log("KO");
+                    },
+            })
+}
     </script>
     <!-- start-smoth-scrolling -->
     <!-- //here ends scrolling icon -->
